# discovery

./: .gitignore  404.html  F4discovery.md  explore.html  index.html  print.html  searchindex.js  searchindex.json
.cargo/: config
01-background/: index.html
02-requirements/: index.html
03-setup/: index.html  linux.html  macos.html  verify.html  windows.html
04-meet-your-hardware/: index.html
05-led-roulette/: build-it.html  debug-it.html  flash-it.html  index.html  my-solution.html  the-challenge.html  the-led-and-delay-abstractions.html
06-hello-world/: index.html  panic.html
07-registers/: bad-address.html  index.html  optimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
08-leds-again/: configuration.html  index.html  power.html  the-solution.html
09-clocks-and-timers/: busy-waiting.html  for-loop-delays.html  index.html  initialization.html  nop.html  one-shot-timer.html  putting-it-all-together.html
10-serial-communication/: index.html  loopbacks.html  nix-tooling.html  windows-tooling.html
11-usart/: buffer-overrun.html  echo-server.html  index.html  my-solution.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html  uprintln.html
12-bluetooth-setup/: at-commands.html  index.html  linux.html  loopback.html
13-serial-over-bluetooth/: index.html
14-i2c/: index.html  lsm303dlhc.html  read-a-single-register.html  read-several-registers.html  the-general-protocol.html  the-solution.html
src/11-usart/auxiliary/: Cargo.toml
src/11-usart/auxiliary/src/: lib.rs
(+29 files in other folders)
