[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "aux11"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-itm = "0.4.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f407"]
version = "0.8.2"

[features]
adapter = []